# heimlig

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: deny.yaml  license.yml  rust.yml  security.yaml
cli/: Cargo.toml  memory.x
cli/.cargo/: config.toml
cli/src/: common.rs
client/: Cargo.toml
doc/: Architecture.md  conf.py  design.rst  index.rst
doc/_static/: Diagramms.drawio  architecture.drawio
doc/img/: architecture.drawio
examples/linux/: Cargo.toml  README.md  rust-toolchain.toml
examples/linux/src/: main.rs
examples/stm32h745i/: README.md
examples/stm32h745i/cm4/: Cargo.toml  memory.x
examples/stm32h745i/cm7/: Cargo.toml  rust-toolchain.toml
heimlig/: Cargo.toml  build.rs  deny.toml
heimlig/src/: lib.rs
heimlig/src/client/: api.rs
heimlig/src/common/: jobs.rs  limits.rs  mod.rs  pool.rs  queues.rs  scrub_on_drop.rs
heimlig/src/config/: keys.rs  keystore.rs  mod.rs  pool.rs
heimlig/src/crypto/: chacha20poly1305.rs  ecc.rs  ecdh.rs  ecdsa.rs  ed25519.rs  hash.rs  hmac.rs  mod.rs  rng.rs  x25519.rs
heimlig/src/crypto/aes/: cbc.rs  ccm.rs  cmac.rs  gcm.rs  mod.rs
heimlig/src/hsm/: core.rs  keystore.rs  mod.rs  util.rs
heimlig/src/hsm/scheduler/: mod.rs  tests.rs
heimlig/src/hsm/workers/: aes_worker.rs  chachapoly_worker.rs  ecc_worker.rs  hmac_worker.rs  mod.rs  rng_worker.rs
heimlig/src/integration/: embassy.rs  memory_key_store.rs  mod.rs  raw_errors.rs  raw_jobs.rs
heimlig/tests/: aes_cbc.rs  aes_cmac.rs  aes_gcm.rs  api_core_integration.rs  api_core_worker_communication.rs  chachapoly.rs  ecdsa.rs  hmac.rs  misc.rs  random.rs
heimlig/tests/common/: mod.rs
linux_poc/: Cargo.toml  README.md  rust-toolchain.toml
linux_poc/src/: main.rs
server/: Cargo.toml
showcase/: Cargo.toml
sindri/: Cargo.toml  deny.toml
sindri/src/: lib.rs  queue.rs
sindri/src/api/: mod.rs
sindri/src/client/: api.rs
sindri/src/common/: alloc.rs  channel.rs  jobs.rs  limits.rs  mod.rs  pool.rs
sindri/src/config/: keystore.rs  mod.rs  pool.rs
sindri/src/crypto/: aes.rs  chacha20poly1305.rs  cmac.rs  ecc.rs  ecdh.rs  ecdsa.rs  ed25519.rs  hash.rs  hmac.rs  mod.rs  rng.rs  x25519.rs
sindri/src/crypto/aes/: cbc.rs  cbc_mode.rs  ccm.rs  ccm_mode.rs  gcm.rs  gcm_mode.rs  mod.rs
sindri/src/host/: core.rs  jobs.rs  keystore.rs  mod.rs  scheduler.rs
sindri/src/host/scheduler/: mod.rs  tests.rs
sindri/src/host/workers/: chachapoly_worker.rs  rng_worker.rs
sindri/src/hsm/scheduler/: mod.rs  tests.rs
sindri/tests/: api_core_integration.rs
stm32h745i/: Cargo.toml  README.md
stm32h745i/.cargo/: config.toml
stm32h745i/cm4/: Cargo.toml  rust-toolchain.toml
stm32h745i/cm7/: Cargo.toml  rust-toolchain.toml
stm32h745i/cm7/.cargo/: config.toml
