[package]
edition = "2021"
name = "cli"
version = "0.1.0"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"

[dependencies]
#anyhow = "1"
base64 = { version = "0.13", default-features = false }
#clap = { version = "3", features = ["derive"] }
heapless = "0.7"
hex = { version = "0.4", default-features = false }
#log = "0.4"
rand = { version = "0.8", default-features = false }
sindri = { path = "../sindri" }

## emabssy repo
embassy = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "time-tick-32768hz"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = ["nightly", "defmt", "stm32h745xi-cm7", "net", "time-driver-any", "exti", "unstable-pac", "unstable-traits"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16"] }
embedded-io = { version = "0.3.0", features = ["async"] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0-alpha.8" }
embedded-hal-async = { version = "0.1.0-alpha.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
critical-section = "0.2.5"
micromath = "2.0.0"
stm32-fmc = "0.2.4"
embedded-storage = "0.3.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-
