[package]
name = "heimlig"
version = "0.1.0"
authors = ["ESRLabs"]
description = "Heimlig is a Hardware Security Module (HSM) firmware for embedded platforms"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/esrlabs/heimlig"

[dependencies]
aes = { version = "0.8", default-features = false, features = ["zeroize"] }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
blake3 = { version = "1", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["block-padding", "zeroize"] }
ccm = { version = "0.5", default-features = false }
chacha20poly1305 = { version = "0.10", default-features = false }
ecdsa = { version = "0.16", default-features = false }
ed25519-dalek = { version = "2.0", default-features = false, features = ["zeroize"] }
elliptic-curve = { version = "0.13", default-features = false }
embassy-sync = { version = "0.3", default-features = false }
heapless = { version = "0.7", default-features = false, features = ["cas", "x86-sync-pool"] }
p256 = { version = "0.13", default-features = false, features = ["ecdh", "ecdsa"] }
p384 = { version = "0.13", default-features = false, features = ["ecdh", "ecdsa"] }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
sha3 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets", "zeroize"] }
zeroize = { version = "1.6", default-features = false }

[dev-dependencies]
heapless = "0.7"
hex = "0.4"
ed25519-dalek = { version = "2.0", default-features = false, features = ["zeroize", "rand_core"] }
