[package]
name = "heimlig"
version = "0.1.0"
authors = ["ESRLabs"]
description = "Heimlig is a Hardware Security Module (HSM) firmware for embedded platforms"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/esrlabs/heimlig"
rust-version = "1.77"

[dependencies]
aes = { version = "0.8.3", default-features = false, features = ["zeroize"] }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes"] }
blake3 = { version = "1.5.0", default-features = false }
cbc = { version = "0.1.2", default-features = false, features = ["block-padding", "zeroize"] }
ccm = { version = "0.5.0", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
cmac = { version = "0.7.2", default-features = false }
critical-section = { version = "1.1.2", default-features = false }
dbl = { version = "0.3.2", default-features = false }
displaydoc = { version = "0.2.4", default-features = false }
ecdsa = { version = "0.16.8", default-features = false }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["zeroize"] }
elliptic-curve = { version = "0.13.5", default-features = false }
embassy-futures = { version = "0.1.0", default-features = false }
embassy-sync = { version = "0.5.0", default-features = false }
futures = { version = "0.3.28", default-features = false }
heapless = { version = "0.7.17", default-features = false, features = ["cas", "x86-sync-pool"] }
hmac = { version = "0.12.1", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdh", "ecdsa"] }
p384 = { version = "0.13.0", default-features = false, features = ["ecdh", "ecdsa"] }
rand_chacha = { version = "0.3.1", default-features = false }
sha2 = { version = "0.10.7", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets", "zeroize"] }
zeroize = { version = "1.6.0", default-features = false }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
critical-section = { version = "1.1.2", default-features = false, features = ["std"] }
heapless = { version = "0.7.17", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["zeroize", "rand_core"] }

[build-dependencies]
cbindgen = { version = "0.27.0", default-features = false }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
