[package]
name = "sindri"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8", default-features = false, features = ["zeroize"]}
aes-gcm = { version = "0.9", default-features = false, features = ["aes"] }
cbc = { version = "0.1", default-features = false, features = ["block-padding", "zeroize"] }
# TODO: switch to 0.5 version after ccm crate release 
ccm = { git = "https://github.com/RustCrypto/AEADs", rev = "6b980d96962a1aadd90c7b802d591b99994d647a", default-features = false }
# TODO: switch to 0.10 version after chacha20poly1305 crate release
chacha20poly1305 = { git = "https://github.com/RustCrypto/AEADs", rev = "6b980d96962a1aadd90c7b802d591b99994d647a", default-features = false }
ecdsa = { version = "0.14", default-features = false }
elliptic-curve = { version = "0.12", default-features = false }
generic-array = { version = "0.14", default-features = false, features = ["more_lengths"] }
heapless = { version = "0.7", default-features = false }
p256 = { version = "0.11", default-features = false, features = ["ecdh", "ecdsa"] }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1" , default-features = false }
sha2 = { version = "0.10" , default-features = false }

[dev-dependencies]
futures-test = "0.3"
heapless = "0.7"
hex = "0.4"
