[package]
name = "linux"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "linux"
path = "src/main.rs"

[dependencies]
embassy-executor = { version = "0.2", features = ["arch-std", "executor-thread", "integrated-timers", "log", "nightly"] }
embassy-sync = { version = "0.2", default-features = false }
embassy-time = { version = "0.1", features = ["log", "std"] }
heapless = "0.7"
hex = "0.4"
log = "0.4"
rand = "0.8"
simple_logger = "4"
heimlig = { path = "../../heimlig" }
