[package]
name = "linux"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "linux"
path = "src/main.rs"

[dependencies]
embassy-executor = { version = "0.3.0", features = ["arch-std", "executor-thread", "integrated-timers", "log", "nightly"] }
embassy-sync = { version = "0.3.0", default-features = false }
embassy-time = { version = "0.1.3", features = ["log", "std"] }
heapless = "0.7.16"
hex = "0.4.3"
log = "0.4.20"
rand = "0.8.5"
simple_logger = "4.2.0"
heimlig = { path = "../../heimlig" }
