[package]
name = "linux"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "linux"
path = "src/main.rs"

[dependencies]
embassy-executor = { version = "0.6.0", features = ["arch-std", "executor-thread", "integrated-timers", "log", "nightly"] }
embassy-sync = { version = "0.5.0" }
embassy-time = { version = "0.3.2", features = ["log", "std"] }
futures = "0.3.28"
heapless = "0.7.17"
hex = "0.4.3"
log = "0.4.20"
rand_chacha = "0.3.1"
simple_logger = "5.0.0"
heimlig = { path = "../../heimlig" }
