[package]
edition = "2021"
name = "stm32h745i-cm7"
version = "0.1.0"

[[bin]]
name = "rng_single_core"
path = "src/bin/rng_single_core.rs"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"

[dependencies]
base64 = { version = "0.13", default-features = false }
cortex-m = { version = "0.7", default-features = false, features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", default-features = false }
defmt = { version = "0.3", default-features = false }
defmt-rtt = { version = "0.3", default-features = false }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "77ece3f903735b50f265ddd43520c50e0f28c1a1", features = ["nightly", "defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "77ece3f903735b50f265ddd43520c50e0f28c1a1", features = ["nightly", "defmt", "integrated-timers"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "77ece3f903735b50f265ddd43520c50e0f28c1a1", features = ["nightly", "defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "77ece3f903735b50f265ddd43520c50e0f28c1a1", features = ["nightly", "defmt", "stm32h745xi-cm7", "net", "time-driver-any", "exti", "unstable-pac", "unstable-traits"] }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", rev = "77ece3f903735b50f265ddd43520c50e0f28c1a1", features = ["defmt", "tcp", "dhcpv4", "medium-ethernet", "pool-16"] }
heapless = { version = "0.7", default-features = false }
hex = { version = "0.4", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8", default-features = false }
rand_core = "0.6.3"
sindri = { path = "../../sindri", default-features = false }
