[package]
name = "stm32h745i-cm7"
version = "0.1.0"
authors = ["ESRLabs"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rng_single_core"
path = "src/bin/rng_single_core.rs"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"

[dependencies]
cortex-m = { version = "0.7.7", default-features = false, features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3", default-features = false }
defmt = { version = "0.3.5", default-features = false }
defmt-rtt = { version = "0.4.0", default-features = false }
embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "defmt", "executor-thread", "integrated-timers", "nightly"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32h745xi-cm7", "time-driver-any", "exti"] }
embassy-sync = { version = "0.5.0", default-features = false }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
heapless = { version = "0.7.16", default-features = false }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rand_chacha = { version = "0.3.1", default-features = false }
heimlig = { path = "../../../heimlig", default-features = false }
